# arawn

./: .gitignore  .sops.yaml  Cargo.toml  README.md  arawn.example.toml  coverage.Dockerfile  test-conversation.sh
crates/arawn/: Cargo.toml
crates/arawn-agent/: Cargo.toml
crates/arawn-agent-indexing/: Cargo.toml
crates/arawn-agent-indexing/src/: extraction.rs  gliner.rs  indexer.rs  lib.rs  ner.rs
crates/arawn-agent-tools/: Cargo.toml
crates/arawn-agent-tools/src/: catalog.rs  delegate.rs  explore.rs  explore_integration_tests.rs  file.rs  lib.rs  memory.rs  note.rs  search.rs  shell.rs  think.rs  web.rs  workflow.rs
crates/arawn-agent-tools/src/web/: fetch.rs  mod.rs  search.rs  tests.rs
crates/arawn-agent/src/: agent.rs  lib.rs  stream.rs
crates/arawn-agent/src/agent/: builder.rs  execution.rs  mod.rs  recall.rs  tests.rs
crates/arawn-agent/src/indexing/: indexer.rs
crates/arawn-agent/src/rlm/: mod.rs
crates/arawn-agent/src/tool/: command_validator.rs  context.rs  execution.rs  gate.rs  mod.rs  registry.rs
crates/arawn-agent/src/tools/: file.rs  shell.rs  web.rs
crates/arawn-agent/tests/: facade_safety_net.rs
crates/arawn-auth/: Cargo.toml
crates/arawn-auth/src/: error.rs  lib.rs  oauth2.rs  server.rs  token_store.rs
crates/arawn-ceremonies/: Cargo.toml
crates/arawn-ceremonies/src/: engine.rs  error.rs  events.rs  lib.rs  nightly.rs  patterns.rs  plugin.rs  registry.rs  render.rs  rollup.rs  runner.rs  service.rs  types.rs
crates/arawn-ceremonies/src/plugins/: mod.rs  retro.rs  retro_detectors.rs
crates/arawn-embed/: Cargo.toml
crates/arawn-embed/src/: api.rs  config.rs  error.rs  lib.rs  local.rs
crates/arawn-engine/: Cargo.toml
crates/arawn-engine/src/: agent_defs.rs  background.rs  compact_prompt.rs  compactor.rs  context.rs  diff.rs  error.rs  lib.rs  plan.rs  plugin_adapter.rs  plugin_loader.rs  plugin_watcher.rs  query_engine.rs  system_prompt.rs  testing.rs  token_estimator.rs  tool.rs  tool_result_limiter.rs  tool_timeout.rs  workstream_router.rs
crates/arawn-engine/src/approval/: allowlist.rs  audit.rs  mod.rs
crates/arawn-engine/src/hooks/: config.rs  events.rs  executor.rs  file_watcher.rs  loader.rs  matcher.rs  mod.rs  runner.rs
crates/arawn-engine/src/permissions/: checker.rs  config.rs  mod.rs  prompt.rs  rules.rs
crates/arawn-engine/src/plugins/: builtin.rs  components.rs  installer.rs  loader.rs  manifest.rs  marketplace.rs  mod.rs  runtime.rs  settings.rs
crates/arawn-engine/src/prompt_injection/: coverage_test.rs  detector.rs  heuristics.rs  mod.rs
crates/arawn-extractor/: Cargo.toml
crates/arawn-extractor/src/: chain.rs  cot.rs  error.rs  lib.rs  llm_text.rs  runner.rs
crates/arawn-feeds/: Cargo.toml
crates/arawn-feeds/src/: cadence.rs  clients.rs  dispatch.rs  error.rs  layout.rs  lib.rs  meta.rs  registry.rs  runtime.rs  store.rs  template.rs  types.rs
crates/arawn-feeds/tests/: calendar_upcoming_archive.rs  cloacina_fire.rs  confluence_space_archive.rs  discovery.rs  drive_folder_sync.rs  drive_recent.rs  dynamic_register.rs  gmail_archive.rs  jira_trackers.rs  slack_channel_archive.rs  slack_dm_archive.rs  slack_my_mentions.rs
crates/arawn-integrations/: Cargo.toml
crates/arawn-integrations/src/: credential_store.rs  error.rs  google_common.rs  integration.rs  lib.rs  oauth_flow.rs  retry_after.rs
crates/arawn-llm/: Cargo.toml
crates/arawn-llm/src/: anthropic.rs  api_key.rs  client.rs  common.rs  embeddings.rs  error.rs  groq.rs  hints.rs  lib.rs  mock.rs  openai.rs  openai_compat.rs  retry.rs  types.rs  warming.rs
crates/arawn-memory/: Cargo.toml
crates/arawn-memory/src/: cypher_schema.rs  error.rs  graph.rs  inject.rs  lib.rs  manager.rs  ontology.rs  shortcodes.rs  stack.rs  store.rs  types.rs  vector.rs
crates/arawn-memory/tests/: longmemeval_bench.rs  recall_eval.rs
crates/arawn-projections/: Cargo.toml
crates/arawn-projections/src/: atlassian.rs  calendar.rs  dispatch.rs  drive.rs  embed.rs  error.rs  gmail.rs  lib.rs  schema.rs  slack.rs  store.rs  types.rs
crates/arawn-projections/tests/: embed_pass.rs  gmail_e2e.rs  hybrid_search.rs
crates/arawn-storage/: Cargo.toml
crates/arawn-storage/migrations/: V1__initial.sql  V2__feeds.sql  V3__workstreams.sql  V4__session_workstream_name.sql  V5__extractor_cursors.sql  V6__ceremonies.sql
crates/arawn-storage/src/: database.rs  error.rs  extractor_cursor_store.rs  jsonl.rs  layout.rs  lib.rs  session_store.rs  store.rs  workstream_store.rs
crates/arawn-test-utils/: Cargo.toml
crates/arawn-test-utils/src/: assertions.rs  fixtures.rs  lib.rs  mock_backend.rs  mock_tools.rs  server.rs  sse.rs  ws_client.rs
crates/arawn-tests/: Cargo.toml
crates/arawn-tests/src/: lib.rs
crates/arawn-tests/tests/: compaction.rs  engine_persistence.rs  full_pipeline.rs  hooks.rs  hot_reload.rs  local_service.rs  memory_stack.rs  memory_tools.rs  permissions.rs  plugin_components.rs  plugin_loading.rs  skills.rs  tool_artifacts.rs  uat.rs  uat_fixture.rs  uat_fixture_smoke.rs  websocket.rs  workflows.rs
crates/arawn-tool/: Cargo.toml
crates/arawn-tool/src/: context.rs  error.rs  lib.rs  llm_preference.rs  registry.rs  tool.rs
crates/arawn-tui/: Cargo.toml
crates/arawn-tui/src/: action.rs  app.rs  app_types.rs  client.rs  command.rs  config.rs  event.rs  event_loop.rs  events.rs  lib.rs  markdown.rs  modal.rs  protocol.rs  render.rs  snapshot.rs  snapshot_tests.rs  theme.rs  tui_prompt.rs  width.rs  wrap.rs  ws.rs  ws_client.rs
crates/arawn-tui/tests/: bug_hang.rs  e2e_tui.rs  headless.rs  helpers.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  render_helpers_test.rs  render_tests.rs  ws_integration.rs
crates/arawn-workflow/: Cargo.toml
crates/arawn-workflow/src/: agent_executor.rs  lib.rs  runner.rs  scaffold.rs  tools.rs
crates/arawn/src/: channel_prompt.rs  config.rs  config_watcher.rs  doctor.rs  lib.rs  llm_pool.rs  local_service.rs  main.rs  plugin_cmd.rs  ws_server.rs
crates/arawn/tests/: cli_integration.rs  command_integration.rs
examples/workflows/daily-pr-summary/: Cargo.toml  README.md  package.toml
(+1108 files in other folders)
