[package]
name = "arawn-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent core for Arawn - conversation loop, tools, and task execution"

[dependencies]
arawn-types = { workspace = true }
arawn-memory = { workspace = true }
arawn-llm = { workspace = true }
arawn-mcp = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1.10"

# NER (GLiNER)
gline-rs-vendored = { workspace = true, optional = true }
orp = { package = "orp-vendored", path = "../orp-vendored", optional = true }

[features]
default = []
gliner = ["dep:gline-rs-vendored", "dep:orp"]
testing = []  # Exposes MockTool and other test utilities for external crates

[dev-dependencies]
arawn-llm = { workspace = true, features = ["testing"] }
arawn-config = { workspace = true }
arawn-agent-indexing = { path = "../arawn-agent-indexing" }
arawn-agent-tools = { path = "../arawn-agent-tools" }
arawn-test-utils = { workspace = true }
tempfile = "3.10"
serial_test = "3.2"
