[package]
name = "arawn-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
chacha20poly1305 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
