[package]
name = "arawn-ceremonies"
version = "0.1.0"
edition = "2024"

[dependencies]
arawn-llm = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
cloacina = { version = "0.6", features = ["sqlite"] }
futures = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
arawn-storage = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
