[package]
name = "arawn-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
arawn-core = { path = "../arawn-core" }
arawn-memory = { path = "../arawn-memory" }
arawn-projections = { path = "../arawn-projections" }
arawn-storage = { workspace = true }
arawn-llm = { workspace = true }
arawn-embed = { path = "../arawn-embed" }
async-trait = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
