[package]
name = "arawn-integrations"
version = "0.1.0"
edition = "2024"

[dependencies]
arawn-auth = { path = "../arawn-auth" }
arawn-service = { workspace = true }
async-trait = { workspace = true }
chacha20poly1305 = "0.10"
chrono = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = { workspace = true }
