[package]
name = "arawn-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
async-trait = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
bytes = "1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
