[package]
name = "arawn-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
arawn-core = { workspace = true }
chrono = { workspace = true }
refinery = { version = "0.9", features = ["rusqlite"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
