[package]
name = "arawn-tests"
version = "0.1.0"
edition = "2024"

# This crate exists solely for integration/functional tests.
# It has no lib — only test targets.

[dependencies]
arawn-bin = { package = "arawn", path = "../arawn" }
async-trait = { workspace = true }
arawn-core = { workspace = true }
arawn-embed = { path = "../arawn-embed" }
arawn-engine = { workspace = true }
arawn-llm = { workspace = true }
arawn-memory = { path = "../arawn-memory" }
arawn-service = { workspace = true }
arawn-storage = { workspace = true }
arawn-tool-plugin = { workspace = true }
arawn-workflow = { path = "../arawn-workflow" }
axum = { version = "0.8", features = ["ws"] }
fidius-host = "0.0.5"
futures-util = "0.3"
tokio-tungstenite = "0.26"
serde_json = { workspace = true }

tempfile = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cloacina-build = "0.4"
