[package]
name = "arawn-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
arawn-llm = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
