[package]
name = "arawn-workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
arawn-core = { workspace = true }
arawn-engine = { workspace = true }
arawn-tool = { workspace = true }
arawn-llm = { workspace = true }
arawn-storage = { workspace = true }
async-trait = { workspace = true }
cloacina = { version = "0.4", features = ["sqlite"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cloacina-build = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
