# Standalone crate — not part of the arawn workspace. Workflow crates compile
# to a .cdylib that the cloacina runtime loads at install time.
[workspace]

[package]
name = "daily-pr-summary"
version = "0.1.0"
edition = "2021"

[features]
default = ["packaged"]
packaged = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cloacina-macros = "0.5"
cloacina-workflow = { version = "0.5", features = ["packaged"] }
cloacina-workflow-plugin = "0.5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cloacina-build = "0.5"
